# bpe_framework

./: .~lock.README.md#  .~lock.build_log.md#  .~lock.purpose.md#  CMakeLists.txt  README.md  build_log.md  nocklist.md  purpose.md  serialization  tecdesc
codeblocks/: bpe_framework.cbp
data/: training_data.txt  training_data_large.txt
docs/: .~lock.whybpe.odt#  master_plan.odt  whybpe.odt
include/lm/: config_manager.hpp  context_manager.hpp  conversation.hpp  conversation_manager.hpp  conversation_serializer.hpp
include/lm/conversation/: conversation_manager.hpp
include/lm/core/: eigen_serialization.hpp  tensor.hpp  tensor_pool.hpp
include/lm/data/: training_data.hpp
include/lm/generation/: greedy_sampler.hpp  random_sampler.hpp  sampler.hpp  temperature_sampler.hpp  topk_sampler.hpp  topp_sampler.hpp
include/lm/inference/: inference_engine.hpp
include/lm/models/: attention.hpp  conversation_model.hpp  feed_forward.hpp  language_model.hpp  layer_norm.hpp  transformer.hpp  transformer_block.hpp  transformer_model.hpp
include/lm/optimizers/: adam.hpp
include/lm/runtime/: init.hpp  shutdown.hpp
include/lm/tokenizer/: bpe_tokenizer.hpp  token_types.hpp  unicode_utils.hpp
include/lm/training/: data_loader.hpp  losses.hpp  trainer.hpp
src/: CMakeLists.txt  chat_demo.cpp  config_manager.cpp  conversation_manager.cpp  integration_example.cpp  performance_test.cpp  sampler_test.cpp  serialization_demo.cpp  starter_convo.cpp  test_bpe.cpp  test_conversation.cpp  test_data_loader.cpp  test_generation.cpp  test_tensor_pool.cpp  test_transformer.cpp  test_unicode_bpe.cpp
src/alpha/: CMakeLists.txt  config_io.cpp  repl.cpp
src/context/: context_manager.cpp
src/conversation/: conversation_manager.cpp
src/generation/: greedy_sampler.cpp  random_sampler.cpp  sampler.cpp  temperature_sampler.cpp  topk_sampler.cpp  topp_sampler.cpp
src/inference/: inference_engine.cpp
src/models/: CMakeLists.txt  attention.cpp  conversation_model.cpp  feed_forward.cpp  language_model.cpp  layer_norm.cpp  transformer.bak  transformer.cpp  transformer_block.cpp  transformer_model.cpp
src/optimizaers/: adam.cpp
src/optimizers/: CMakeLists.txt  adam.cpp
src/runtime/: CMakeLists.txt  init.cpp  shutdown.cpp  state_utils.cpp
src/tokenizer/: CMakeLists.txt  CmakeLists.txt  bpe_tokenizer.cpp  unicode_utils.cpp
src/training/: CMakeLists.txt  data_loader.cpp  losses.cpp  trainer.cpp
tests/: context_manager.cpp  interactive_learning_convo.cpp  sampler_test.cpp  serialization_demo.cpp  starter_convo.cpp  test_config_manager.cpp  test_generation.cpp  test_logger.cpp  test_transformer.cpp
